--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1,4 +1,25 @@
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
 body{
+    padding: 0;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-style: oblique;
+}
+
+.timer-div{
+    background-image: url(../images/joanna-kosinska-bF2vsubyHcQ-unsplash.jpg);
+      /* filter: blur(2px);
+  -webkit-filter: blur(2px); */
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 70vh;
+    align-content: center;
+}
+
+.login_div{
+    margin-bottom: 200px;
 }
